Split ship placement method
Now has one method to check if a ship can be placed, and another
that actually places the ship.

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 Store the current colour of the X so it doesn't have to check each time it renders.
 
-Add menu.
+When holding a ship, show if it can be placed
 
-Have ai parse game board after sinking ship, checking for partially sunk ships.
+have the ai do the player randomisation
